force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Is_iCredit__c.field-meta.xml
<CustomField>
    <fullName>Is_iCredit__c</fullName>
    <description>Indicates whether current material number is of iCredit type</description>
    <formula>CONTAINS( Apttus_Proposal__Product__r.Informatics_SKU_Type__c, $CustomMetadata.Code_Parameter__mdt.Informatics_iCredit_Types.PickListValue__c  )</formula>
    <label>Is iCredit</label>
    <type>Checkbox</type>
</CustomField>