force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Stores description regarding the line item</description>
    <label>Line Description</label>
    <type>TextArea</type>
</CustomField>