force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Stores the list price of the line item</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>