force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Manual_Rebate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Manual_Rebate_Per_Unit__c</fullName>
    <description>Field to be populated on the Cart to calculate manual rebate net from SAP.</description>
    <label>Manual Rebate Per Unit</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>