force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Material_Class__c.field-meta.xml
<CustomField>
    <fullName>Material_Class__c</fullName>
    <description>Stores the material class value of the line item from which proposal line item is derived</description>
    <formula>if(Apttus_QPConfig__OptionId__c!=null,TEXT( Apttus_QPConfig__OptionId__r.Material_Class__c ),TEXT(Apttus_Proposal__Product__r.Material_Class__c))</formula>
    <label>Material Class</label>
    <type>Text</type>
</CustomField>