force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>Stores the material number value of the product in the line item</description>
    <formula>Apttus_Proposal__Product__r.ProductCode</formula>
    <label>Material Number</label>
    <type>Text</type>
</CustomField>