force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Max_Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Guidance__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Max Discount Guidance percentage pulled from Discount Guidance, based on Account and Product</description>
    <inlineHelpText>Max Discount Guidance percentage pulled from Discount Guidance, based on Account and Product</inlineHelpText>
    <label>Max Discount Guidance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>