force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Max_Samples_Allowed_Per_kit__c.field-meta.xml
<CustomField>
    <fullName>Max_Samples_Allowed_Per_kit__c</fullName>
    <description>Stores the max samples value allowed per kit in consortium quote</description>
    <label>Max Samples Allowed (Per kit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>