force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Meets_Discount_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Meets_Discount_Guidelines__c</fullName>
    <description>Indicates whether line item is meeting the suggested sales discount guidelines as part of catalyst functionality</description>
    <formula>IF(NOT(ISBLANK( Suggested_Sales_Discount_Percentage__c)), IF(Suggested_Sales_Discount_Percentage__c = &apos;NA&apos;,&apos;NA&apos; ,IF( Sales_Discount_Deviation_Percentage__c &lt;= 0 , IMAGE(&quot;/resource/1555062746000/Guidelines_Color_Green&quot;, &quot;Green&quot;, 18, 18),IF(Sales_Discount_Deviation_Percentage__c &gt; 0 &amp;&amp; Sales_Discount_Deviation_Percentage__c &lt;= $CustomMetadata.Discount_Guidelines_Deviation__mdt.Yellow.Discount_Deviation_Limit__c, IMAGE(&quot;/resource/1555062862000/Guidelines_Color_Yellow&quot;, &quot;Yellow&quot;, 18, 18),IF(Sales_Discount_Deviation_Percentage__c &gt; $CustomMetadata.Discount_Guidelines_Deviation__mdt.Yellow.Discount_Deviation_Limit__c &amp;&amp; Sales_Discount_Deviation_Percentage__c &lt;= $CustomMetadata.Discount_Guidelines_Deviation__mdt.Orange.Discount_Deviation_Limit__c , IMAGE(&quot;/resource/1555062797000/Guidelines_Color_Orange&quot;, &quot;Orange&quot;, 18, 18) , IMAGE(&quot;/resource/1555062829000/Guidelines_Color_Red&quot;, &quot;Red&quot;, 18, 18)) )) ), IMAGE(&quot;/resource/1555062699000/Guidelines_Color_Grey&quot;, &quot;Grey&quot;, 18, 18))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meets Discount Guidelines</label>
    <type>Text</type>
</CustomField>