force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Previous_ERP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_ERP_Contract_Number__c</fullName>
    <description>Derive the contract number from ERP_Line_Number_Id__c on order line. ERP_Line_Number_Id__c is in format &lt;Contract Number&gt;_&lt;Line Number&gt;</description>
    <formula>IF( ISBLANK(ERP_Line_Number_Id__c) ,
Existing_Subscription__r.Contract_Number__c,
LEFT(  
            ERP_Line_Number_Id__c, 
            FIND(&apos;_&apos;,ERP_Line_Number_Id__c)-1
      ))</formula>
    <label>Previous ERP Contract Number</label>
    <type>Text</type>
</CustomField>