force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Price_per_sample__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sample__c</fullName>
    <description>Stores the price per sample value for the line item in consortium quote</description>
    <label>Price per sample</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>