force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Stores the Informatics family of the product in the line item</description>
    <formula>Apttus_Proposal__Product__r.Informatics_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>