force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category Group of the product in the category hierarchy</description>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Proposal Line Items (Product Group)</relationshipLabel>
    <relationshipName>Proposal_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>