force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Localization__c.field-meta.xml
<CustomField>
    <fullName>Product_Localization__c</fullName>
    <businessOwnerUser>cmulkey@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to translated product for use on the quote output</description>
    <label>Product Localization</label>
    <referenceTo>Product_Localization__c</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>