force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Name_With_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_With_Description__c</fullName>
    <description>Product With Description to use in Templates</description>
    <formula>Apttus_Proposal__Product__r.Name   + &apos; - &apos; +
Apttus_Proposal__Product__r.Description</formula>
    <label>Product Name With Description</label>
    <type>Text</type>
</CustomField>