force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <description>Stores the subscription tier value for the given product on line item</description>
    <formula>Apttus_Proposal__Product__r.Subscription_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Tier</label>
    <type>Text</type>
</CustomField>