force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Stores the Informatics SKU type value for the given product on line item</description>
    <formula>Apttus_Proposal__Product__r.Informatics_SKU_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>