force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>Stores the Program type value for the given product on line item</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Program</fullName>
            </value>
            <value>
                <fullName>Reagent Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>