force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Channel_2__c.field-meta.xml
<CustomField>
    <fullName>Promo_Channel_2__c</fullName>
    <description>Stores the promo channel for the second promotion value on the line item</description>
    <label>Promo Channel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>