force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_1__c</fullName>
    <description>Field to store Promo Code.</description>
    <label>Promo Code 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>