force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_2__c</fullName>
    <description>Field to Store Promo code.</description>
    <label>Promo Code 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>