force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Code_5__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_5__c</fullName>
    <description>Field to store Promo Code 5.</description>
    <label>Promo Code 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>