force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Promo_Name_1__c</fullName>
    <description>Stores the promo name for the first promotion value on the line item</description>
    <label>Promo Name 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>