force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_Name_5__c.field-meta.xml
<CustomField>
    <fullName>Promo_Name_5__c</fullName>
    <description>Stores the promo name for the fifth promotion value on the line item</description>
    <label>Promo Name 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>