force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promo_T_C_3__c.field-meta.xml
<CustomField>
    <fullName>Promo_T_C_3__c</fullName>
    <description>Stores the promo terms and conditions for the third promotion value on the line item</description>
    <label>Promo T&amp;C 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>