force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promotion_1__c.field-meta.xml
<CustomField>
    <fullName>Promotion_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to incentive record for the first promotion value on the line item</description>
    <label>Promotion 1</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Quotation Line Items (Incentive)</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>