force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promotion_2__c.field-meta.xml
<CustomField>
    <fullName>Promotion_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to incentive record for the second promotion value on the line item</description>
    <label>Promotion 2</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Quotation Line Items (Promotion 2)</relationshipLabel>
    <relationshipName>Quotation_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>