force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promotion_3__c.field-meta.xml
<CustomField>
    <fullName>Promotion_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to incentive record for the third promotion value on the line item</description>
    <label>Promotion 3</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Quotation Line Items (Promotion 3)</relationshipLabel>
    <relationshipName>Quotation_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>