force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <description>Stores the promotion code on the line item</description>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>