force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <description>Stores the 18 digit id for the current quote line item</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Quote Line Item</label>
    <type>Text</type>
</CustomField>