force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Quote_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sub_Type__c</fullName>
    <description>Stores the quote sub type details for the line item</description>
    <formula>Apttus_Proposal__Proposal__r.Quote_Sub_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Sub Type</label>
    <type>Text</type>
</CustomField>