force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Reason_For_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Price_Override__c</fullName>
    <description>Reason For List Price Override to send via integration to SAP.</description>
    <label>Reason For Price Override</label>
    <type>TextArea</type>
</CustomField>