force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <description>Stores the reason for rejection for the given line item for custom quote.</description>
    <label>Reason For Rejection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>