force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Registrant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Contact</inlineHelpText>
    <label>Registrant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotation Line Items (Registrant Contact)</relationshipLabel>
    <relationshipName>Quotation_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>