force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Renewal_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Subscription__c</fullName>
    <description>ERP_Line_Number_Id__c  will only be populated for line items selected from asset lines.</description>
    <formula>AND(NOT(ISBLANK( ERP_Line_Number_Id__c)),
        NOT(CONTAINS($CustomMetadata.Product_Code_to_Subscription_Map__mdt.MicroArray_Analysis.Product_Code__c, Apttus_Proposal__Product__r.ProductCode)), 
        NOT(CONTAINS($CustomMetadata.Product_Code_to_Subscription_Map__mdt.MicroArray_Analysis_and_Report.Product_Code__c, Apttus_Proposal__Product__r.ProductCode)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Subscription</label>
    <type>Checkbox</type>
</CustomField>