force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Sales_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discretionary_Discount__c</fullName>
    <description>Stores the percentage or amount of discretionary discount applied by the sales rep on the line item</description>
    <label>Sales Discretionary Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>