force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Sales_Discretionary_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discretionary_Type__c</fullName>
    <description>Stores the type of discretionary discount applied by the sales rep on the line item, can be in percentage or absolute amount</description>
    <label>Sales Discretionary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% Discount</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>