force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Select_Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_Instance_Type__c</fullName>    
    <description>User to select instance type &quot;On Prem&quot;. &quot;Cloud&quot;</description>
    <inlineHelpText>Please select instance type</inlineHelpText>
    <label>Select Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>