force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Server_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Server_Connectivity__c</fullName>
    <description>Stores the connectivity type of the server for the product in line item</description>
    <label>Server Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
                <default>true</default>
                <label>Offline</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>