force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Shipping_In_1Q_After_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_1Q_After_Close_Quarter__c</fullName>
    <description>Stores the percentage or amount of discretionary discount applied by the sales rep on the line item</description>
    <label>Shipping In 1Q After Close Quarter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>