force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Shipping_In_2Q_After_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_2Q_After_Close_Quarter__c</fullName>
    <description>Indicates the shipping value after Close Quarters in 2nd quarter</description>
    <label>Shipping In 2Q After Close Quarter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>