force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Shipping_In_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_Close_Quarter__c</fullName>
    <description>Stores the shipping value in close quarters for the line item</description>
    <label>Shipping In Close Quarter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>