force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Signed_Open_Offer__c.field-meta.xml
<CustomField>
    <fullName>Signed_Open_Offer__c</fullName>
    <description>Sold To Customers with Signed Open Offer for Approvals.</description>
    <formula>Apttus_Proposal__Proposal__r.Apttus_Proposal__Account__r.Signed_Open_Offer__c || Apttus_Proposal__Proposal__r.Ultimate_Consignee__r.Signed_Open_Offer__c</formula>
    <label>Signed Open Offer</label>
    <type>Checkbox</type>
</CustomField>