force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Skip_Country_Check_UC__c.field-meta.xml
<CustomField>
    <fullName>Skip_Country_Check_UC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skip Country Check in Transborder Approvals</description>
    <label>Skip Country Check UC</label>
    <type>Checkbox</type>
</CustomField>