force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Sold_To_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Sales_Organization__c</fullName>
    <description>Stores the sold to sales organization value of the quotation</description>
    <formula>Apttus_Proposal__Proposal__r.Sold_To_Sales_Organization__c</formula>
    <label>Sold To Sales Organization</label>
    <type>Text</type>
</CustomField>