force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Species_Category__c.field-meta.xml
<CustomField>
    <fullName>Species_Category__c</fullName>
    <description>Created as part of DCP-535</description>
    <label>Species Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>