force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Stacked_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stacked_Discount_Amount__c</fullName>
    <description>Created as per DCP-535</description>
    <label>Stacked Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>