force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Duration__c</fullName>
    <description>Stores the Subscription duration for the term in case of Subscription type product on line item</description>
    <label>Subscription Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>