force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Suggested_Sales_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Sales_Discount_Percentage__c</fullName>
    <description>Stores the suggested discount percentage calculated from external system as part of catalyst functionality</description>
    <label>Suggested Sales Discount %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>