force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Template_China_Prod2__c.field-meta.xml
<CustomField>
    <fullName>Template_China_Prod2__c</fullName>
    <description>Stores 1 when product material number is 20012552</description>
    <label>Template China Prod2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>