force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Template_Infinium_Product__c.field-meta.xml
<CustomField>
    <fullName>Template_Infinium_Product__c</fullName>
    <description>This field updates to 1 if the infinium conditions are met. DCP-25195</description>
    <label>Template Infinium Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>