force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Template_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Template_Material_Number__c</fullName>
    <description>Display Material Number if Old Material No is Blank</description>
    <formula>IF (
    TEXT ( Apttus_QPConfig__LineType__c ) = &apos;Option&apos;,
        IF (
            OR ( 
                Apttus_QPConfig__OptionId__r.Old_Material_Number__c = &apos;N/A&apos;, 
                Apttus_QPConfig__OptionId__r.Old_Material_Number__c = &apos;&apos;
            ), 
            Apttus_QPConfig__OptionId__r.Material_Number__c, 
            Apttus_QPConfig__OptionId__r.Old_Material_Number__c
        ),
        IF (
            OR ( 
                Old_Material_Number__c = &apos;N/A&apos;, 
                Old_Material_Number__c = &apos;&apos;
            ), 
            Material_Number__c, 
            Old_Material_Number__c
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Material Number</label>
    <type>Text</type>
</CustomField>