force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Template_Total_Distributor_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Template_Total_Distributor_Rebate__c</fullName>
    <description>Stores distributor rebate value and used in output template</description>
    <formula>IF ((ISNULL(Manual_Rebate__c)),
Distributor_Rebate__c,
Manual_Rebate__c )</formula>
    <label>Template Total Distributor Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>