force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description>Stores term value in months and used in output template</description>
    <formula>Apttus_QPConfig__DerivedFromId__r.Term_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term(Months)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>