force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <description>Stores total discount amount value for the given line item</description>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>