force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Total_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percentage__c</fullName>
    <description>Stores total discount percentage value for the given line item</description>
    <label>Total Discount %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>