force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <description>Stores total list price value for the given line item</description>
    <label>Total List Price</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>