force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Transborder_Flag__c.field-meta.xml
<CustomField>
    <fullName>Transborder_Flag__c</fullName>
    <description>Indicates whether the quote is a Transborder one or not</description>
    <formula>OR(Apttus_Proposal__Proposal__r.Apttus_Proposal__Opportunity__r.Transborder_Flag__c, Apttus_Proposal__Proposal__r.Indirect_Transregion_Flag__c )</formula>
    <label>Transborder Flag</label>
    <type>Checkbox</type>
</CustomField>