force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/fields/Work_Detail_Line__c.field-meta.xml
<CustomField>
    <fullName>Work_Detail_Line__c</fullName>
    <businessOwnerUser>gis@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store work detail reference for Break Fix scenario</description>
    <inlineHelpText>Field to store work detail reference for Break Fix scenario</inlineHelpText>
    <label>Work Detail Line</label>
    <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
    <relationshipLabel>Quotation Line Items</relationshipLabel>
    <relationshipName>Quotation_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>