force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/validationRules/CheckContactAssociatedwithSoldToOrUCAcc.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckContactAssociatedwithSoldToOrUCAcc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        NOT(ISNEW()), 
        NOT(ISNULL(  Registrant_Contact__c )), 
       NOT(ISBLANK(Registrant_Contact__c )),
       !$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c, 
       Registrant_Contact__r.AccountId  &lt;&gt; Contact_Id_Filter__c, 
       Registrant_Contact__r.AccountId &lt;&gt; Apttus_Proposal__Proposal__r.Ultimate_Consignee__c
    )</errorConditionFormula>
    <errorDisplayField>Registrant_Contact__c</errorDisplayField>
    <errorMessage>You can only select a contact from the Sold To or Ultimate Consignee account</errorMessage>
</ValidationRule>