force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/validationRules/CheckCustomLicensingDescriptionRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCustomLicensingDescriptionRequired</fullName>
    <active>true</active>
    <description>Custom Licensing Description required if custom license setup required = yes</description>
    <errorConditionFormula>AND(
        Custom_License_Setup_Required__c = true,
        ISBLANK(Custom_Licensing_Description__c) )</errorConditionFormula>
    <errorMessage>Custom Licensing Description required if custom license setup required = yes</errorMessage>
</ValidationRule>