force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/validationRules/CheckCustomSetupDetailsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCustomSetupDetailsRequired</fullName>
    <active>true</active>
    <description>Custom Setup Details required if custom setup required = yes</description>
    <errorConditionFormula>AND(
        Custom_Setup_Required__c= true,
        ISBLANK(Custom_Setup_Details__c) )</errorConditionFormula>
    <errorMessage>Custom Setup Details required if custom setup required = yes</errorMessage>
</ValidationRule>