force-app/main/default/objects/Apttus_Proposal__Proposal_Line_Item__c/validationRules/CheckDomainNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDomainNameRequired</fullName>
    <active>true</active>
    <description>If Renewal Subscription = Yes, Domain Name field cannot be edited</description>
    <errorConditionFormula>AND(
        Renewal_Subscription__c = true,
        ISCHANGED(Domain_Name__c))</errorConditionFormula>
    <errorMessage>If Renewal Subscription = Yes, Domain Name field cannot be edited</errorMessage>
</ValidationRule>